Fixing up jackpot command handling